[package]
name = "aoc2019"
version = "0.1.0"
authors = ["HTune <atune313@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
num-bigint = "0.2.3"
num-traits = "0.2.10"
err-derive = "0.2.1"
itertools = "0.8.2"
log = "0.4.8"
petgraph = "0.4.13"
either = "1.5.3"
regex = "1.3.1"
lazy_static = "1.4.0"
num-derive = "0.3.0"
